--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "angular-resource": "1.2.15",
-    "angular-sanitize": "1.2.15"
+    "angular-sanitize": "1.2.15",
+    "extend":""
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
