--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "angularcoq",
+    "authors": [
+    "Charly Poly <cpoly55@gmail.com>"
+  ],
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
