--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-ngmin": "0.0.3"
+    "grunt-ngmin": "0.0.3",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-newer": "~0.6.1",
+    "grunt-contrib-jshint": "~0.7.1"
   },
   "engines": {
     "node": ">=0.10.0"
