--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
+env:
+  - COVERALLS_SERVICE_NAME=travis
+  - COVERALLS_REPO_TOKEN=RsbFJcSvBOhFbcxIHm3RIW99PD0wCqpxZ
 node_js:
   - '0.10'
 before_script:
