--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "grunt-ngmin": "0.0.3",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-newer": "~0.6.1",
-    "grunt-contrib-jshint": "~0.7.1"
+    "grunt-contrib-jshint": "~0.7.1",
+    "grunt-karma-coveralls": "~2.5.1"
   },
   "engines": {
     "node": ">=0.10.0"
